--- a/src/modules/catalog/components/CatalogList/catalogList.module.css
+++ b/src/modules/catalog/components/CatalogList/catalogList.module.css
@@ -1,18 +1,7 @@
 .list {
   display: grid;
-  gap: 30px;
-}
-
-@media (max-width: 1023px) {
-  .list {
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 16px;
-  }
-}
-
-@media (max-width: 767px) {
-  .list {
-    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-    gap: 12px;
-  }
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr)); 
+  gap: clamp(16px, 2vw, 32px);
+  max-width: 100%;
+  margin: 0 auto;
 }
