--- a/src/modules/catalog/components/CatalogPage/catalogPage.module.css
+++ b/src/modules/catalog/components/CatalogPage/catalogPage.module.css
@@ -2,5 +2,27 @@
   min-height: 100vh;
   background: #f6f5f3;
   color: #f4f5f7;
-  /* padding-top: 90px; */
+}
+
+.mobileFilterBtn {
+  display: none;
+  width: 100%;
+  padding: 14px;
+  color: black;
+  background: white;
+  border: 1px solid black;
+  border-radius: 8px;
+  font-weight: 600;
+  margin-bottom: 16px;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .mobileFilterBtn {
+    display: block;
+  }
+
+  .desktopSidebar {
+    display: none;
+  }
 }
