--- a/src/modules/home/Features/features.module.css
+++ b/src/modules/home/Features/features.module.css
@@ -48,7 +48,7 @@
   align-items: stretch;
   min-height: 500px;
   overflow: hidden;
-  background: #000000;
+  background: #19110a;
   box-shadow: 0 18px 40px rgba(0, 0, 0, 0.45);
 }
 
@@ -72,8 +72,8 @@
 
 .rowContent {
   flex: 0.5;
-  background: #000000;
   color: #ffffff;
+  background: #19110a;
   padding: 32px 40px;
   display: flex;
   flex-direction: column;
@@ -119,10 +119,6 @@
 }
 
 @media (max-width: 1024px) {
-  .features {
-    padding: 32px 0px;
-  }
-
   .row {
     border-radius: 0;
     box-shadow: none;
@@ -146,7 +142,7 @@
 
   .row:not(:first-child) .rowImage {
     border-radius: 40px;
-    margin-top: 16px; 
+    margin-top: 16px;
   }
 
   .row,
