--- a/src/modules/catalog/components/CatalogList/catalogList.module.css
+++ b/src/modules/catalog/components/CatalogList/catalogList.module.css
@@ -5,3 +5,9 @@
   max-width: 100%;
   margin: 0 auto;
 }
+
+@media (max-width: 480px) {
+  .list {
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  }
+}
