--- a/src/modules/checkout/ui/checkoutFormUI.module.css
+++ b/src/modules/checkout/ui/checkoutFormUI.module.css
@@ -3,28 +3,30 @@
 .form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 20px;
+  align-items: stretch;
+  gap: 16px;
 
   background: white;
 
   border: 1px solid rgba(255, 255, 255, 0.55);
-  border-radius: 14px;
+  border-radius: 6px;
 
   box-shadow: 0 8px 32px #7878789c;
   width: 100%;
-  padding: 32px 28px;
+  padding: 24px 16px;
 }
 
 .field {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
+  width: 100%;
   justify-content: center;
   gap: 4px;
 }
 
 .label {
+  text-align: center;
   display: block;
   font-weight: 600;
   font-size: 14px;
@@ -43,7 +45,7 @@
 }
 
 .submitButton {
-  width: 50%;
+  width: 100%;
 
   padding: 10px 16px;
   font-size: 17px;
@@ -122,4 +124,12 @@
   align-items: center;
   gap: 8px;
   width: 100%;
+}
+
+@media (min-width: 768px) {
+  .form {
+    padding: 32px 40px;
+    gap: 20px;
+    width: 450px; 
+  }
 }
