--- a/src/modules/cart/ui/cartSuccessView.module.css
+++ b/src/modules/cart/ui/cartSuccessView.module.css
@@ -8,7 +8,6 @@
   background-color: white;
   border-radius: 12px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
-  /* max-width: 360px; */
   margin: auto;
   text-align: center;
 }
@@ -35,29 +34,7 @@
   color: black;
 }
 
-.button {
-  background-color: #9c7e4a;
-  color: #fff;
-  border: none;
-  border-radius: 6px;
-  padding: 10px 20px;
-  font-size: 12px;
-  font-weight: 400;
-  cursor: pointer;
-  transition:
-    background-color 0.5s ease,
-    transform 0.5s ease;
-}
-
-.button:hover {
-  background-color: #d9b56f;
-}
-
-.button:active {
-  transform: scale(0.97);
-}
-
 .button:focus {
-  outline: 2px solid #dfbe7c;
+  outline: 2px solid var(--brand-gold-light);
   outline-offset: 2px;
 }
