--- a/src/shared/icons/Icon.module.css
+++ b/src/shared/icons/Icon.module.css
@@ -57,3 +57,12 @@
   visibility: hidden;
   animation: none;
 }
+
+@keyframes shimmer {
+  0% {
+    background-position: -200% 0;
+  }
+  100% {
+    background-position: 200% 0;
+  }
+}
